--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="public/images/icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VD | Dataviz creativa</title>
+    <title>Computación Cuántica</title>
     <link rel="stylesheet" href="/css/styles.css" />
     <link rel="stylesheet" href="/css/stars.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
